Final report setting section

--- a/latex/final_report/finalReport.tex
+++ b/latex/final_report/finalReport.tex
@@ -162,15 +162,13 @@
 % e-mail address with \email.
 %
 % 1st. author
-\alignauthor
-Karim Kouki %\titlenote{Dr.~Trovato insisted his name be first.}\\
+ %\titlenote{Dr.~Trovato insisted his name be first.}\\
 %       \affaddr{Institute for Clarity in Documentation}\\
 %       \affaddr{1932 Wallamaloo Lane}\\
 %       \affaddr{Wallamaloo, New Zealand}\\
 %       \email{trovato@corporation.com}
 %% 2nd. author
-\alignauthor
-Ahmed Mazari %\titlenote{The secretary disavows
+ %\titlenote{The secretary disavows
 %any knowledge of this author's actions.}\\
 %       \affaddr{Institute for Clarity in Documentation}\\
 %       \affaddr{P.O. Box 1212}\\
@@ -185,6 +183,10 @@ Ahmed Mazari %\titlenote{The secretary disavows
 %       \email{larst@affiliation.org}
 %\and  % use '\and' if you need 'another row' of author names
 %% 4th. author
+\alignauthor
+Karim Kouki
+\alignauthor
+Ahmed Mazari
 \and
 \alignauthor Mihaela Sorostinean
 %       \affaddr{Brookhaven Laboratories}\\
