--- a/latex/final_report/report.bib
+++ b/latex/final_report/report.bib
@@ -1,4 +1,4 @@
-@ARTICLE{hansen2016cocoplat, 
+@article{hansen2016cocoplat, 
   author = {Hansen, N. and Auger, A. and Mersmann, O. and 
              Tu{\v s}ar, T. and Brockhoff, D.},
   title = {{COCO}: A Platform for Comparing Continuous Optimizers 
